--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,7 @@
     "strict": true,
     "esModuleInterop": true,
     "moduleResolution": "node",
-    "baseUrl": "./src",
-    "paths": {
-      "@enums/*": ["enums/*"],
-      "@interfaces/*": ["interfaces/*"],
-      "@utils/*": ["utils/*"]
-    }
+    "baseUrl": "./src"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
